# OpenThermoGUI

./: CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: otgui.yml
resources/: icon.rc  openthermo.qrc.depends
src/: atommass.cpp  atommass.h  calc.cpp  calc.h  chemsys.h  help_utils.cpp  help_utils.h  loadfile.cpp  loadfile.h  main.cpp  symmetry.cpp  symmetry.h  util.cpp  util.h
src/gui/: settingsdialog.cpp  settingsdialog.h  ui.cpp  ui.h
tests/: CP2K_CO2_freq.out  GMS_H2CO_optfreq.out  Gaussian_16_H2CO_freq.out  NWChem_NH2COH_optfreq.out  Orca-6-C3v.out  Orca-C2v-water.out  Orca.out  gaussian_16_C2H5_optfreq.out  orca_SP00001_ensemble.out  orca_SP00002_ensemble.out  orca_SP00003_ensemble.out
tests/symm/: 400-atoms.xyz  C2v.xyz  C4v  D2h-2nd.xyz  D2h.xyz  D4d.xyz  G_C1  G_C2  G_C2h  G_C2v  G_C3  G_C3h  G_C3v  G_C4  G_C4h  G_C4v  G_C5  G_C5h  G_C5v  G_C6  G_C6h  G_C6v  G_C7  G_C7h  G_C7v  G_C8  G_C8h  G_C8v  G_Ci  G_Cinfv  G_Cs  G_D2  G_D2d  G_D2h  G_D3  G_D3d  G_D3h  G_D4  G_D4d  G_D4h  (+123 more)
tests/vasp_5_imine_Freq/: CONTCAR  INCAR  OUTCAR
tests/vasp_6/: CONTCAR  OUTCAR  POSCAR
tests/vasp_CO_Ni111_freq/: CONTCAR  OUTCAR  POSCAR
tests/vasp_CO_freq/: CONTCAR  OUTCAR  POSCAR
